adapt solution to prevent img overflow

--- a/src/app/shared/comcol/comcol-page-logo/comcol-page-logo.component.scss
+++ b/src/app/shared/comcol/comcol-page-logo/comcol-page-logo.component.scss
@@ -1,4 +1,4 @@
-.logo-container {
+img {
   max-width: var(--ds-comcol-logo-max-width);
   max-height: var(--ds-comcol-logo-max-height);
 }
